--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -13,8 +13,10 @@ jobs:
   build:
     strategy:
       matrix:
-        os: [ubuntu-latest, windows-latest]
-        node-version: [14.x, 16.x]
+        # os: [ubuntu-latest, windows-latest]
+        os: [windows-latest]
+        # node-version: [14.x, 16.x]
+        node-version: [14.x]
     runs-on: ${{ matrix.os }}
     env:
       working-directory: ./extension/
