split test run and code coverage

--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -33,8 +33,11 @@ jobs:
       - name: Run tests
         uses: GabrielBB/xvfb-action@v1
         with:
-          run: npx nyc npm run test:coverage
+          run: npm run test:coverage
           working-directory: ${{env.working-directory}}
+      - name: Check Code Coverage
+        run:  npx nyc report --reporter=lcov --reporter=text-summary --check-coverage
+        working-directory: ${{env.working-directory}}
       - name: Test CLI functions
         shell: pwsh
         run: |
