--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -33,6 +33,11 @@ jobs:
           run: npm run test:coverage
           working-directory: ${{env.working-directory}}
       - name: Check Code Coverage
-#        if: ${{ matrix.os == 'ubuntu-latest'}}
         run:  npx nyc report --reporter=lcov --reporter=text-summary --check-coverage
         working-directory: ${{env.working-directory}}
+      - name: Upload Coverage Report
+      - uses: actions/upload-artifact@v2
+        with:
+          name: code-coverage
+          path: ./coverage/**
+          etention-days: 7
