--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -1,43 +1,43 @@
-# This workflow will do a clean install of node dependencies, build the source code and run tests across different versions of node
-# For more information see: https://help.github.com/actions/language-and-framework-guides/using-nodejs-with-github-actions
+# # This workflow will do a clean install of node dependencies, build the source code and run tests across different versions of node
+# # For more information see: https://help.github.com/actions/language-and-framework-guides/using-nodejs-with-github-actions
 
-name: Tests
+# name: Tests
 
-on:
-  push:
-    branches: [master]
-  pull_request:
-    branches: [master]
+# on:
+#   push:
+#     branches: [master]
+#   pull_request:
+#     branches: [master]
 
-jobs:
-  build:
-    strategy:
-      matrix:
-        os: [windows-latest]
-        node-version: [14.x, 16.x]
-    runs-on: ${{ matrix.os }}
-    env:
-      working-directory: ./extension/
-      NAB_DISABLE_TELEMETRY: true
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v2
-      - name: Use Node.js ${{ matrix.node-version }}
-        uses: actions/setup-node@v1
-        with:
-          node-version: ${{ matrix.node-version }}
-      - run: npm install
-        working-directory: ${{env.working-directory}}
-      - run: npx prettier --check .
-        working-directory: ${{env.working-directory}}
-      - name: Run tests
-        uses: GabrielBB/xvfb-action@v1
-        with:
-          run: npm run test
-          working-directory: ${{env.working-directory}}
-      - name: Test CLI functions
-        shell: pwsh
-        run: |
-          & "./.github/workflows/scripts/cli-test.ps1"
-      - name: Check Circular Dependencies
-        run: node ${{env.working-directory}}node_modules/madge/bin/cli.js --warning --circular --extensions ts ${{env.working-directory}}src/extension.ts
+# jobs:
+#   build:
+#     strategy:
+#       matrix:
+#         os: [windows-latest]
+#         node-version: [14.x, 16.x]
+#     runs-on: ${{ matrix.os }}
+#     env:
+#       working-directory: ./extension/
+#       NAB_DISABLE_TELEMETRY: true
+#     steps:
+#       - name: Checkout
+#         uses: actions/checkout@v2
+#       - name: Use Node.js ${{ matrix.node-version }}
+#         uses: actions/setup-node@v1
+#         with:
+#           node-version: ${{ matrix.node-version }}
+#       - run: npm install
+#         working-directory: ${{env.working-directory}}
+#       - run: npx prettier --check .
+#         working-directory: ${{env.working-directory}}
+#       - name: Run tests
+#         uses: GabrielBB/xvfb-action@v1
+#         with:
+#           run: npm run test
+#           working-directory: ${{env.working-directory}}
+#       - name: Test CLI functions
+#         shell: pwsh
+#         run: |
+#           & "./.github/workflows/scripts/cli-test.ps1"
+#       - name: Check Circular Dependencies
+#         run: node ${{env.working-directory}}node_modules/madge/bin/cli.js --warning --circular --extensions ts ${{env.working-directory}}src/extension.ts
