--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -35,9 +35,12 @@ jobs:
       - name: Check Code Coverage
         run:  npx nyc report --reporter=lcov --reporter=text-summary --check-coverage
         working-directory: ${{env.working-directory}}
+      # - name: Tar files
+      #   run: tar -cvf my_files.tar ./coverage/**
+      #   working-directory: ${{env.working-directory}}
       - name: Upload Coverage Report
         uses: actions/upload-artifact@v2
         with:
           name: code-coverage
-          path: ./coverage/**
-          etention-days: 7
+          path: ${{env.working-directory}}/coverage/**
+          retention-days: 7
