--- a/.github/workflows/nerd-stuff.yml
+++ b/.github/workflows/nerd-stuff.yml
@@ -18,6 +18,8 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v2
+      - name: Setup Graphviz
+        uses: ts-graphviz/setup-graphviz@v1
       - name: Use Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v1
         with:
@@ -29,7 +31,6 @@ jobs:
       - name: Check Circular Dependencies
         run: |
           node node_modules/madge/bin/cli.js --warning --circular --extensions ts src/extension.ts
-          apt-get install install graphviz
           node node_modules/madge/bin/cli.js --warning --image dependency-graph-ts.svg --extensions ts src/extension.ts
         working-directory: ${{env.working-directory}}
       - name: Code Coverage
