--- a/.github/workflows/nerd-stuff.yml
+++ b/.github/workflows/nerd-stuff.yml
@@ -33,6 +33,13 @@ jobs:
           node node_modules/madge/bin/cli.js --warning --circular --extensions ts src/extension.ts
           node node_modules/madge/bin/cli.js --warning --image dependency-graph-ts.svg --extensions ts src/extension.ts
         working-directory: ${{env.working-directory}}
+      - name: Upload Dependency Graph
+        uses: actions/upload-artifact@v2
+        with:
+          name: code-coverage
+          path: dependency-graph-ts.svg
+          retention-days: 7
+          working-directory: ${{env.working-directory}}
       - name: Code Coverage
         uses: GabrielBB/xvfb-action@v1
         with:
