--- a/.github/workflows/nerd-stuff.yml
+++ b/.github/workflows/nerd-stuff.yml
@@ -37,9 +37,8 @@ jobs:
         uses: actions/upload-artifact@v2
         with:
           name: code-coverage
-          path: dependency-graph-ts.svg
+          path: ${{env.working-directory}}dependency-graph-ts.svg
           retention-days: 7
-          working-directory: ${{env.working-directory}}
       - name: Code Coverage
         uses: GabrielBB/xvfb-action@v1
         with:
