--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -1,6 +1,3 @@
-# This workflow will do a clean install of node dependencies, build the source code and run tests across different versions of node
-# For more information see: https://help.github.com/actions/language-and-framework-guides/using-nodejs-with-github-actions
-
 name: Tests
 
 on:
@@ -13,7 +10,7 @@ jobs:
   build:
     strategy:
       matrix:
-        os: [ubuntu-latest, windows-latest]
+        os: [windows-latest]
         node-version: [14.x, 16.x]
     runs-on: ${{ matrix.os }}
     env:
@@ -28,16 +25,12 @@ jobs:
           node-version: ${{ matrix.node-version }}
       - run: npm install
         working-directory: ${{env.working-directory}}
-      - run: npx prettier --check .
-        working-directory: ${{env.working-directory}}
       - name: Run tests
         uses: GabrielBB/xvfb-action@v1
         with:
-          run: npx nyc npm run test:coverage
+          run: npm run test
           working-directory: ${{env.working-directory}}
       - name: Test CLI functions
         shell: pwsh
         run: |
           & "./.github/workflows/scripts/cli-test.ps1"
-      - name: Check Circular Dependencies
-        run: node ${{env.working-directory}}node_modules/madge/bin/cli.js --warning --circular --extensions ts ${{env.working-directory}}src/extension.ts
