--- a/extension/package.json
+++ b/extension/package.json
@@ -495,6 +495,13 @@
           "description": "When creating external documentation, this setting specifies if an index.md file should be created with links to other pages.",
           "scope": "resource"
         },
+        "NAB.IndexFileForDocsLevel": {
+          "type": "integer",
+          "default": 2,
+          "description": "When creating the index file for external documentation, this setting specifies the number of levels for the links.",
+          "scope": "resource",
+          "minimum": 1
+        },
         "NAB.IncludeTablesAndFieldsInDocs": {
           "type": "boolean",
           "default": true,
@@ -674,7 +681,8 @@
     "strip-json-comments": "^3.1.1",
     "time-stamp": "^1.1.0",
     "txml": "^4.0.1",
-    "uuid": "^8.3.0"
+    "uuid": "^8.3.0",
+    "js-yaml": "^4.1.0"
   },
   "devDependencies": {
     "@istanbuljs/nyc-config-typescript": "^1.0.1",
@@ -682,6 +690,7 @@
     "@types/applicationinsights": "^0.20.0",
     "@types/format-duration": "^1.0.1",
     "@types/glob": "^7.1.3",
+    "@types/js-yaml": "^4.0.5",
     "@types/lodash": "^4.14.168",
     "@types/minimatch": "^3.0.4",
     "@types/mocha": "^8.0.4",
