--- a/extension/package.json
+++ b/extension/package.json
@@ -635,7 +635,8 @@
             "type": "boolean",
             "default": false,
             "description": "If enabled log statements will be printed to console.",
-            "scope": "resource"
+            "scope": "resource",
+            "deprecationMessage": "This setting is not used anymore, do not use."
           },
           "NAB.LoadSymbols": {
             "type": "boolean",
