--- a/test-app/Xliff-test/docs/TOC.yml
+++ b/test-app/Xliff-test/docs/TOC.yml
@@ -19,6 +19,9 @@
     - name: NAB ToolTip
       href: table-nab-tool-tip/TOC.yml
       topicHref: table-nab-tool-tip/index.md
+    - name: The Deprecated Table
+      href: table-nabx-the-deprecated-table/TOC.yml
+      topicHref: table-nabx-the-deprecated-table/index.md
   - name: Table Extensions
     href: table-extensions.md
     items:
@@ -67,6 +70,42 @@
     - name: NAB Test Query
       href: query-nab-test-query/TOC.yml
       topicHref: query-nab-test-query/index.md
+  - name: Enums
+    href: enums.md
+    items:
+    - name: NAB Test Extensible Enum
+      href: enum-nab-test-extensible-enum/TOC.yml
+      topicHref: enum-nab-test-extensible-enum/index.md
+- name: Web Services
+  href: web-services.md
+  items:
+  - name: Codeunits
+    href: ws-codeunits.md
+    items:
+    - name: systemAPI
+      href: ws-codeunit-nab-test-codeunit/TOC.yml
+      topicHref: ws-codeunit-nab-test-codeunit/index.md
+  - name: Pages
+    href: ws-pages.md
+    items:
+    - name: customer
+      href: ws-page-nab-test-table/TOC.yml
+      topicHref: ws-page-nab-test-table/index.md
+    - name: item
+      href: ws-page-nab-tool-tips/TOC.yml
+      topicHref: ws-page-nab-tool-tips/index.md
+- name: API Objects
+  href: api-objects.md
+  items:
+  - name: API Pages
+    href: api-pages.md
+    items:
+    - name: customer
+      href: api-page-test-customer-api/TOC.yml
+      topicHref: api-page-test-customer-api/index.md
 - name: Deprecated Features
   href: deprecated-features.md
   items:
+  - name: Tables
+    href: deprecated-tables.md
+    items:
