Updated docs for TestApp

--- a/test-app/Xliff-test/docs/TOC.yml
+++ b/test-app/Xliff-test/docs/TOC.yml
@@ -49,6 +49,9 @@
     - name: NAB ToolTips
       href: page-nab-tool-tips/TOC.yml
       topicHref: page-nab-tool-tips/index.md
+    - name: NAB With Grid
+      href: page-nab-with-grid/TOC.yml
+      topicHref: page-nab-with-grid/index.md
   - name: Page Extensions
     href: page-extensions.md
     items:
