--- a/extension/package.json
+++ b/extension/package.json
@@ -741,6 +741,7 @@
     "@types/xmldom": "^0.1.30",
     "@typescript-eslint/eslint-plugin": "^4.22.1",
     "@typescript-eslint/parser": "^4.22.1",
+    "@vscode/test-electron": "^2.1.3",
     "eslint": "^7.26.0",
     "eslint-config-prettier": "8.3.0",
     "eslint-plugin-prettier": "3.4.0",
@@ -752,7 +753,6 @@
     "ts-loader": "^9.1.2",
     "ts-node": "^10.4.0",
     "typescript": "^4.2.4",
-    "vscode-test": "^1.5.0",
     "webpack": "^5.36.2",
     "webpack-cli": "^4.7.0"
   }
