--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -43,7 +43,8 @@ jobs:
           uses: actions/upload-artifact@v2
           with:
             name: nab-al-tools-${{ github.sha }}
-            path: ./*.vsix
+            path: ./extension/*.vsix
+            retention-days: 7
 
         # If the run failed, npm log may help to diagnose.
         - name: "(debug) Upload npm log"
