add option release-patch

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -9,6 +9,7 @@ on:
         default: 'pre-release'
         options:
           - pre-release
+          - release-patch
           - release
 jobs:
     release:
