--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -21,11 +21,8 @@ jobs:
         working-directory: ./extension/
         RELEASETYPE: ${{ github.event.inputs.releaseType }}
       steps:
-        - name: Checkout
-          uses: actions/checkout@v2
-
-        - name: Setup Node.js
-          uses: actions/setup-node@v2
+        - uses: actions/checkout@v2
+        - uses: actions/setup-node@v2
           with:
             node-version: 16.x
 
