--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -26,6 +26,10 @@ jobs:
           with:
             node-version: 16.x
 
+        - run: |
+            git config user.name "github-actions"
+            git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
+
         - name: Install dependencies
           run: |
              npm ci
