--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -36,7 +36,7 @@ jobs:
              npm install -g vsce
           working-directory: ${{env.working-directory}}
 
-        - name: "Create ${{ env.RELEASETYPE }}"
+        - name: "Package & Publish: ${{ env.RELEASETYPE }}"
           run: |
             pwd
             ../dev-tools/PowerShell/library/Publish-ToMarketPlace-Workflow.ps1 -releaseType ${{ env.RELEASETYPE }}
