--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -56,6 +56,7 @@ jobs:
             pat: ${{ secrets.VSCE_PAT }}
             registryUrl: https://marketplace.visualstudio.com
             extensionFile: ${{ steps.packageVSIX.outputs.vsixPath }}
+            working-directory: ${{env.working-directory}}
 
         - name: Push Commits
           run: |
