--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -16,6 +16,7 @@ on:
         required: true
 jobs:
     release:
+      if: github.ref == 'refs/heads/master'
       runs-on: windows-latest
       env:
         working-directory: ./extension/
